--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,5 @@
 name: EssentialAPI
-main: Draglis/EssentialAPI
-src-namespace-prefix: EssentialAPI
 version: 0.0.1
-api-version: 4.0.0
+api: [4.0.0]
 author: Draglis
+main: Draglis\EssentialAPI
